# mail-to-telegram-app

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  yacht-template.json
debian/: service
src/: error.rs  handler.rs  lib.rs  main.rs  server.rs  telegram.rs
