[package]
name = "mail-to-telegram"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mtl"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mailin = "0.6"
log = "0.4.17"
simple_logger = "4"
regex = "1"
lazy_static = "1"
serde_json = "1.0.88"
thiserror = "1"
num_cpus = "1.14.0"

[dependencies.async-std]
version = "1"
features = ["tokio1"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
default_features = false
features = ["rustls-tls", "multipart"]

[profile.release]
lto = "thin"