[package]
name = "mail-to-telegram"
version = "0.1.0"
edition = "2021"
authors = ["Christian Schweigel"]
license-file = "LICENSE-APACHE"

[package.metadata.deb]
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]
unit-name = "mail-to-telegram"
enable = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mailin = "0.6"
log = "0.4.17"
simple_logger = "4"
regex = "1"
lazy_static = "1"
thiserror = "1"
telegram-bot-api = "0.1.2"

[dependencies.async-std]
version = "1"
features = ["tokio1"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
default_features = false
features = ["rustls-tls"]

[profile.release]
lto = "thin"


